@@ -1,20 +1,13 @@
 package com.fitnessapp.config;
 
-import com.fitnessapp.model.DietType;
-import com.fitnessapp.model.Recipe;
-import com.fitnessapp.model.Role;
-import com.fitnessapp.model.User;
-import com.fitnessapp.repository.DietTypeRepository;
-import com.fitnessapp.repository.RecipeRepository;
-import com.fitnessapp.repository.RoleRepository;
-import com.fitnessapp.repository.UserRepository;
-import com.fitnessapp.service.TrainingPlanService;
-import org.springframework.beans.factory.annotation.Autowired;
+import com.fitnessapp.model.*; // Включва всички енъми и класове
+        import com.fitnessapp.repository.*; // Включва всички репозитории
+        import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.CommandLineRunner;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Component;
 
-import java.util.List;
+import java.util.Collections;
 import java.util.Set;
 
 @Component
@@ -24,313 +17,388 @@ public class DataInitializer implements CommandLineRunner {
     private final UserRepository userRepository;
     private final RoleRepository roleRepository;
     private final DietTypeRepository dietTypeRepository;
+    private final ActivityLevelRepository activityLevelRepository;
+    private final GoalRepository goalRepository;
     private final PasswordEncoder passwordEncoder;
-    private final TrainingPlanService trainingPlanService;
 
     @Autowired
-    public DataInitializer(RecipeRepository recipeRepository,
-                           UserRepository userRepository,
-                           RoleRepository roleRepository,
-                           DietTypeRepository dietTypeRepository,
-                           PasswordEncoder passwordEncoder,
-                           TrainingPlanService trainingPlanService) {
+    public DataInitializer(RecipeRepository recipeRepository, UserRepository userRepository,
+                           RoleRepository roleRepository, DietTypeRepository dietTypeRepository,
+                           ActivityLevelRepository activityLevelRepository,
+                           GoalRepository goalRepository, PasswordEncoder passwordEncoder) {
         this.recipeRepository = recipeRepository;
         this.userRepository = userRepository;
         this.roleRepository = roleRepository;
         this.dietTypeRepository = dietTypeRepository;
+        this.activityLevelRepository = activityLevelRepository;
+        this.goalRepository = goalRepository;
         this.passwordEncoder = passwordEncoder;
-        this.trainingPlanService = trainingPlanService;
     }
 
     @Override
     public void run(String... args) throws Exception {
-        // Попълване на роли
-        seedRoles(); // <-- Този метод вече ще съдържа ROLE_MODERATOR
-        // Попълване на диетични типове
-        seedDietTypes();
-        // Попълване на упражнения и тренировъчни шаблони
-        trainingPlanService.seedDefaultTrainingPlans();
-        // Попълване на рецепти
-        seedRecipes();
-        // Попълване на потребители
-        seedUsers();
-    }
-
-
-    private void seedRoles() {
+        // Инициализация на Role
         if (roleRepository.count() == 0) {
-            roleRepository.save(Role.builder().name("ROLE_USER").build());
-            roleRepository.save(Role.builder().name("ROLE_MODERATOR").build());
-            roleRepository.save(Role.builder().name("ROLE_ADMIN").build());
-            System.out.println("Ролите са инициализирани успешно.");
-        }
-    }
+            Role userRole = new Role();
+            userRole.setName("ROLE_USER");
+            roleRepository.save(userRole);
 
-    private void seedDietTypes() {
+            Role adminRole = new Role();
+            adminRole.setName("ROLE_ADMIN");
+            roleRepository.save(adminRole);
+
+            Role moderatorRole = new Role();
+            moderatorRole.setName("ROLE_MODERATOR");
+            roleRepository.save(moderatorRole);
+
+            System.out.println("Роли попълнени!");
+        }
+
+        // Инициализация на DietType
         if (dietTypeRepository.count() == 0) {
-            dietTypeRepository.save(DietType.builder().name("Standard").description("Standard diet").build());
-            dietTypeRepository.save(DietType.builder().name("Vegan").description("Vegan diet").build());
-            dietTypeRepository.save(DietType.builder().name("Vegetarian").description("Vegetarian diet").build());
-            dietTypeRepository.save(DietType.builder().name("Keto").description("Ketogenic diet").build());
-            dietTypeRepository.save(DietType.builder().name("Paleo").description("Paleolithic diet").build());
+            DietType standardDiet = new DietType();
+            standardDiet.setName("Standard");
+            standardDiet.setDescription("Balanced diet including all food groups.");
+            dietTypeRepository.save(standardDiet);
+
+            DietType vegetarianDiet = new DietType();
+            vegetarianDiet.setName("Vegetarian");
+            vegetarianDiet.setDescription("Plant-based diet, no meat, poultry, or fish.");
+            dietTypeRepository.save(vegetarianDiet);
+
+            DietType veganDiet = new DietType();
+            veganDiet.setName("Vegan");
+            veganDiet.setDescription("Strictly plant-based, no animal products including dairy and eggs.");
+            dietTypeRepository.save(veganDiet);
+
+            System.out.println("Типове диети попълнени!");
         }
-    }
 
-    private void seedRecipes() {
+        // Инициализация на ActivityLevel
+        if (activityLevelRepository.count() == 0) {
+            ActivityLevel sedentary = new ActivityLevel();
+            sedentary.setName("Sedentary");
+            sedentary.setDescription("Little or no exercise");
+            sedentary.setMultiplier(1.2);
+            activityLevelRepository.save(sedentary);
+
+            ActivityLevel lightActivity = new ActivityLevel();
+            lightActivity.setName("Lightly Active");
+            lightActivity.setDescription("Light exercise/sports 1-3 days/week");
+            lightActivity.setMultiplier(1.375);
+            activityLevelRepository.save(lightActivity);
+
+            ActivityLevel moderateActivity = new ActivityLevel();
+            moderateActivity.setName("Moderately Active");
+            moderateActivity.setDescription("Moderate exercise/sports 3-5 days/week");
+            moderateActivity.setMultiplier(1.55);
+            activityLevelRepository.save(moderateActivity);
+
+            ActivityLevel veryActive = new ActivityLevel();
+            veryActive.setName("Very Active");
+            veryActive.setDescription("Hard exercise/sports 6-7 days a week");
+            veryActive.setMultiplier(1.725);
+            activityLevelRepository.save(veryActive);
+
+            ActivityLevel extraActive = new ActivityLevel();
+            extraActive.setName("Extra Active");
+            extraActive.setDescription("Very hard exercise/physical job");
+            extraActive.setMultiplier(1.9);
+            activityLevelRepository.save(extraActive);
+
+            System.out.println("Нива на активност попълнени!");
+        }
+
+        // Инициализация на Goal
+        if (goalRepository.count() == 0) {
+            Goal loseWeightGoal = new Goal();
+            loseWeightGoal.setName("Lose Weight");
+            loseWeightGoal.setDescription("Create a calorie deficit to lose weight.");
+            loseWeightGoal.setCalorieModifier(-500.0);
+            goalRepository.save(loseWeightGoal);
+
+            Goal gainWeightGoal = new Goal();
+            gainWeightGoal.setName("Gain Weight");
+            gainWeightGoal.setDescription("Create a calorie surplus to gain weight.");
+            gainWeightGoal.setCalorieModifier(500.0);
+            goalRepository.save(gainWeightGoal);
+
+            Goal maintainGoal = new Goal();
+            maintainGoal.setName("Maintain Weight");
+            maintainGoal.setDescription("Maintain current weight.");
+            maintainGoal.setCalorieModifier(0.0);
+            goalRepository.save(maintainGoal);
+
+            System.out.println("Цели попълнени!");
+        }
+
+
+        // Инициализация на Recipes
         if (recipeRepository.count() == 0) {
+            DietType standardDiet = dietTypeRepository.findByName("Standard").orElse(null);
+            DietType vegetarianDiet = dietTypeRepository.findByName("Vegetarian").orElse(null);
+            DietType veganDiet = dietTypeRepository.findByName("Vegan").orElse(null);
 
-
-            // Рецепти за Закуска (Breakfast)
+            // Рецепти за закуска
             recipeRepository.save(Recipe.builder()
                     .name("Овесена каша с плодове")
-                    .type("breakfast")
-                    .instructions("Сварете овесени ядки с вода или ядково мляко. Добавете плодове.")
-                    .imageUrl("https://example.com/oatmeal.jpg")
-                    .calories(300).protein(10).fat(5).carbs(50)
                     .description("Здравословна закуска, богата на фибри.")
-                    .tags(Set.of("vegan", "vegetarian", "gluten_free", "high_carb", "breakfast"))
+                    .imageUrl("oats.jpg")
+                    .calories(350.0).protein(12.0).carbs(60.0).fat(8.0)
+                    .tags(Set.of("здравословно", "закуска"))
+                    .mealType(MealType.BREAKFAST)
+                    .instructions("Сварете овесените ядки с вода или мляко. Добавете плодове по избор.")
+                    .dietType(vegetarianDiet)
+                    .allergens(Set.of("глутен"))
+                    .meatType(MeatType.NONE)
+                    .containsDairy(true)
+                    .containsFish(false)
+                    .containsNuts(false)
+                    .containsPork(false)
+                    .isVegetarian(true)
                     .build());
 
             recipeRepository.save(Recipe.builder()
-                    .name("Омлет със зеленчуци")
-                    .type("breakfast")
-                    .instructions("Разбийте яйца, добавете нарязани зеленчуци (пипер, лук, спанак). Изпечете.")
-                    .imageUrl("https://example.com/omelette.jpg")
-                    .calories(250).protein(18).fat(15).carbs(8)
-                    .description("Бърза и протеинова закуска.")
-                    .tags(Set.of("vegetarian", "keto", "high_protein", "allergy_eggs", "breakfast"))
+                    .name("Яйца по панагюрски")
+                    .description("Традиционна българска закуска с кисело мляко и яйца.")
+                    .imageUrl("eggs_panagyurishte.jpg")
+                    .calories(420.0).protein(25.0).carbs(15.0).fat(30.0)
+                    .tags(Set.of("традиционно", "закуска"))
+                    .mealType(MealType.BREAKFAST)
+                    .instructions("Сварете яйцата поширани. Залейте с кисело мляко и запържен червен пипер.")
+                    .dietType(standardDiet)
+                    .allergens(Set.of("мляко", "яйца"))
+                    .meatType(MeatType.NONE)
+                    .containsDairy(true)
+                    .containsFish(false)
+                    .containsNuts(false)
+                    .containsPork(false)
+                    .isVegetarian(true)
+                    .build());
+
+            // Рецепти за обяд
+            recipeRepository.save(Recipe.builder()
+                    .name("Пилешка салата с киноа")
+                    .description("Лека и протеинова салата за обяд.")
+                    .imageUrl("chicken_quinoa_salad.jpg")
+                    .calories(480.0).protein(35.0).carbs(40.0).fat(20.0)
+                    .tags(Set.of("салата", "обяд", "протеин"))
+                    .mealType(MealType.LUNCH)
+                    .instructions("Сварете киноа, изпечете пилешко филе. Смесете със зеленчуци и дресинг.")
+                    .dietType(standardDiet)
+                    .allergens(Collections.emptySet())
+                    .meatType(MeatType.CHICKEN)
+                    .containsDairy(false)
+                    .containsFish(false)
+                    .containsNuts(false)
+                    .containsPork(false)
+                    .isVegetarian(false)
                     .build());
 
             recipeRepository.save(Recipe.builder()
-                    .name("Кисело мляко с мед и орехи")
-                    .type("breakfast")
-                    .instructions("Смесете кисело мляко с мед и поръсете с натрошени орехи.")
-                    .imageUrl("https://example.com/yogurt-nuts.jpg")
-                    .calories(350).protein(15).fat(20).carbs(30)
-                    .description("Вкусна и засищаща закуска.")
-                    .tags(Set.of("vegetarian", "dairy", "allergy_nuts", "breakfast"))
+                    .name("Леща по турски")
+                    .description("Богата на протеини и фибри веган супа.")
+                    .imageUrl("lentil_soup.jpg")
+                    .calories(320.0).protein(18.0).carbs(50.0).fat(5.0)
+                    .tags(Set.of("супа", "веган", "обяд"))
+                    .mealType(MealType.LUNCH)
+                    .instructions("Сварете леща със зеленчуци и подправки.")
+                    .dietType(veganDiet)
+                    .allergens(Collections.emptySet())
+                    .meatType(MeatType.NONE)
+                    .containsDairy(false)
+                    .containsFish(false)
+                    .containsNuts(false)
+                    .containsPork(false)
+                    .isVegetarian(true)
                     .build());
 
-            // Рецепти за Междинно хранене (Snack)
+            // Рецепти за вечеря
             recipeRepository.save(Recipe.builder()
-                    .name("Ябълка с фъстъчено масло")
-                    .type("snack")
-                    .instructions("Нарежете ябълка и намажете с фъстъчено масло.")
-                    .imageUrl("https://example.com/apple-pb.jpg")
-                    .calories(200).protein(8).fat(12).carbs(20)
-                    .description("Бърз и енергиен междинен прием.")
-                    .tags(Set.of("vegan", "vegetarian", "gluten_free", "allergy_nuts", "snack"))
+                    .name("Сьомга с аспержи и сладък картоф")
+                    .description("Здравословна вечеря с омега-3 мастни киселини.")
+                    .imageUrl("salmon_asparagus.jpg")
+                    .calories(550.0).protein(40.0).carbs(30.0).fat(30.0)
+                    .tags(Set.of("риба", "вечеря", "здравословно"))
+                    .mealType(MealType.DINNER)
+                    .instructions("Изпечете сьомгата, задушете аспержите и сладкия картоф.")
+                    .dietType(standardDiet)
+                    .allergens(Set.of("риба"))
+                    .meatType(MeatType.FISH)
+                    .containsDairy(false)
+                    .containsFish(true)
+                    .containsNuts(false)
+                    .containsPork(false)
+                    .isVegetarian(false)
                     .build());
 
+            recipeRepository.save(Recipe.builder()
+                    .name("Пиле с ориз")
+                    .description("Класическа и засищаща вечеря.")
+                    .imageUrl("chicken_rice.jpg")
+                    .calories(600.0).protein(45.0).carbs(70.0).fat(15.0)
+                    .tags(Set.of("класика", "вечеря"))
+                    .mealType(MealType.DINNER)
+                    .instructions("Сгответе пилешки късове с ориз и зеленчуци.")
+                    .dietType(standardDiet)
+                    .allergens(Collections.emptySet())
+                    .meatType(MeatType.CHICKEN)
+                    .containsDairy(false)
+                    .containsFish(false)
+                    .containsNuts(false)
+                    .containsPork(false)
+                    .isVegetarian(false)
+                    .build());
+
+            // Рецепти за междинни закуски (Snacks)
             recipeRepository.save(Recipe.builder()
                     .name("Протеинов шейк")
-                    .type("snack")
-                    .instructions("Смесете протеин на прах с вода/мляко и плодове.")
-                    .imageUrl("https://example.com/protein-shake.jpg")
-                    .calories(180).protein(25).fat(3).carbs(15)
-                    .description("Бърз прием на протеин след тренировка.")
-                    .tags(Set.of("vegetarian", "snack")) // Може да е vegan, ако е растителен протеин
-                    .build());
-
-            // Рецепти за Обяд (Lunch)
-            recipeRepository.save(Recipe.builder()
-                    .name("Пилешка салата Цезар")
-                    .type("lunch")
-                    .instructions("Сгответе пилешко филе, нарежете и смесете със салата Айсберг, крутони, пармезан и дресинг Цезар.")
-                    .imageUrl("https://example.com/caesar-salad.jpg")
-                    .calories(450).protein(35).fat(25).carbs(20)
-                    .description("Класическа салата с пилешко месо.")
-                    .tags(Set.of("meat_chicken", "dairy", "lunch"))
+                    .description("Бърза и лесна закуска след тренировка.")
+                    .imageUrl("protein_shake.jpg")
+                    .calories(250.0).protein(30.0).carbs(20.0).fat(5.0)
+                    .tags(Set.of("шейк", "следтренировка", "протеин"))
+                    .mealType(MealType.SNACK)
+                    .instructions("Смесете протеин на прах с мляко или вода и плодове.")
+                    .dietType(standardDiet)
+                    .allergens(Set.of("мляко"))
+                    .meatType(MeatType.NONE)
+                    .containsDairy(true)
+                    .containsFish(false)
+                    .containsNuts(false)
+                    .containsPork(false)
+                    .isVegetarian(true)
                     .build());
 
             recipeRepository.save(Recipe.builder()
-                    .name("Супа от леща (Веган)")
-                    .type("lunch")
-                    .instructions("Сварете леща със зеленчуци (моркови, лук, целина, картофи) и подправки.")
-                    .imageUrl("https://example.com/lentil-soup.jpg")
-                    .calories(380).protein(20).fat(8).carbs(60)
-                    .description("Засищаща и здравословна супа.")
-                    .tags(Set.of("vegan", "vegetarian", "gluten_free", "high_protein", "lunch"))
-                    .build());
-
-            recipeRepository.save(Recipe.builder()
-                    .name("Сьомга с аспержи")
-                    .type("lunch")
-                    .instructions("Изпечете филе от сьомга и аспержи. Поднесете с лимон.")
-                    .imageUrl("https://example.com/salmon-asparagus.jpg")
-                    .calories(500).protein(40).fat(30).carbs(10)
-                    .description("Богата на омега-3 мастни киселини.")
-                    .tags(Set.of("meat_fish", "keto", "high_protein", "lunch"))
-                    .build());
-
-            // Рецепти за Вечеря (Dinner)
-            recipeRepository.save(Recipe.builder()
-                    .name("Говеждо с броколи")
-                    .type("dinner")
-                    .instructions("Задушете говеждо месо и броколи в соев сос.")
-                    .imageUrl("https://example.com/beef-broccoli.jpg")
-                    .calories(600).protein(45).fat(30).carbs(25)
-                    .description("Протеиново ястие за вечеря.")
-                    .tags(Set.of("meat_beef", "high_protein", "dinner"))
-                    .build());
-
-            recipeRepository.save(Recipe.builder()
-                    .name("Кюфтета от нахут (Веган)")
-                    .type("dinner")
-                    .instructions("Смелете нахут, лук, чесън и подправки. Оформете кюфтета и изпечете/изпържете.")
-                    .imageUrl("https://example.com/chickpea-patties.jpg")
-                    .calories(420).protein(15).fat(18).carbs(50)
-                    .description("Алтернатива на месо за вегани.")
-                    .tags(Set.of("vegan", "vegetarian", "gluten_free", "dinner"))
-                    .build());
-
-            recipeRepository.save(Recipe.builder()
-                    .name("Свинско с ориз")
-                    .type("dinner")
-                    .instructions("Задушете свинско месо и ориз със зеленчуци.")
-                    .imageUrl("https://example.com/pork-rice.jpg")
-                    .calories(550).protein(35).fat(25).carbs(40)
-                    .description("Традиционно ястие.")
-                    .tags(Set.of("meat_pork", "dinner"))
-                    .build());
-
-            recipeRepository.save(Recipe.builder()
-                    .name("Кесо пица с карфиол основа")
-                    .type("dinner")
-                    .instructions("Пригответе основа от карфиол, покрийте с топинг (сирене, пеперони) и изпечете.")
-                    .imageUrl("https://example.com/keto-pizza.jpg")
-                    .calories(580).protein(30).fat(45).carbs(15)
-                    .description("Вкусна кето пица.")
-                    .tags(Set.of("keto", "dairy", "meat_pork", "dinner")) // Примерно с пеперони
-                    .build());
-
-            recipeRepository.save(Recipe.builder()
-                    .name("Агнешко с картофи")
-                    .type("dinner")
-                    .instructions("Изпечете агнешко месо с картофи на фурна.")
-                    .imageUrl("https://example.com/lamb-potatoes.jpg")
-                    .calories(650).protein(40).fat(40).carbs(30)
-                    .description("Традиционно агнешко ястие.")
-                    .tags(Set.of("meat_lamb", "dinner"))
-                    .build());
-
-            // Рецепти с алергени
-            recipeRepository.save(Recipe.builder()
-                    .name("Паста с песто и ядки")
-                    .type("lunch")
-                    .instructions("Сварете паста, смесете с песто, направено с босилек, пармезан, зехтин и ядки.")
-                    .imageUrl("https://example.com/pasta-pesto-nuts.jpg")
-                    .calories(480).protein(15).fat(30).carbs(40)
-                    .description("Вкусна паста за любителите на песто.")
-                    .tags(Set.of("allergy_gluten", "allergy_nuts", "dairy", "vegetarian", "lunch"))
-                    .build());
-
-            recipeRepository.save(Recipe.builder()
-                    .name("Сандвич с фъстъчено масло и конфитюр")
-                    .type("snack")
-                    .instructions("Намажете две филии хляб с фъстъчено масло и конфитюр.")
-                    .imageUrl("https://example.com/pb-j-sandwich.jpg")
-                    .calories(320).protein(10).fat(15).carbs(35)
-                    .description("Бърз и лесен сандвич.")
-                    .tags(Set.of("allergy_gluten", "allergy_nuts", "vegetarian", "snack"))
+                    .name("Ябълка с фъстъчено масло")
+                    .description("Здравословна и засищаща междинна закуска.")
+                    .imageUrl("apple_peanut_butter.jpg")
+                    .calories(280.0).protein(8.0).carbs(30.0).fat(15.0)
+                    .tags(Set.of("плодове", "ядки", "снак"))
+                    .mealType(MealType.SNACK)
+                    .instructions("Нарежете ябълка и намажете с фъстъчено масло.")
+                    .dietType(vegetarianDiet)
+                    .allergens(Set.of("фъстъци"))
+                    .meatType(MeatType.NONE)
+                    .containsDairy(false)
+                    .containsFish(false)
+                    .containsNuts(true)
+                    .containsPork(false)
+                    .isVegetarian(true)
                     .build());
 
             System.out.println("Рецепти попълнени!");
         }
-    }
 
-    private void seedUsers() {
-        if (userRepository.count() == 0) { // Изпълни само ако няма потребители
-            Role userRole = roleRepository.findByName("ROLE_USER").orElseThrow(() -> new RuntimeException("ROLE_USER not found!"));
-            Role adminRole = roleRepository.findByName("ROLE_ADMIN").orElseThrow(() -> new RuntimeException("ROLE_ADMIN not found!"));
-            // Добави ROLE_MODERATOR ако си решил да го ползваш
-            Role moderatorRole = roleRepository.findByName("ROLE_MODERATOR").orElse(null); // Ако го имаш в seedRoles()
 
-            DietType standardDiet = dietTypeRepository.findByName("Standard").orElse(null);
-            DietType veganDiet = dietTypeRepository.findByName("Vegan").orElse(null);
-            DietType ketoDiet = dietTypeRepository.findByName("Keto").orElse(null);
+        // Инициализация на Users
+        if (userRepository.count() == 0) {
+            Role userRole = roleRepository.findByName("ROLE_USER").orElseThrow();
+            Role adminRole = roleRepository.findByName("ROLE_ADMIN").orElseThrow();
+            Role moderatorRole = roleRepository.findByName("ROLE_MODERATOR").orElseThrow();
 
-            // Потребител 1: Мъж, стандартна диета, активно трениращ
+            DietType standardDiet = dietTypeRepository.findByName("Standard").orElseThrow();
+            DietType vegetarianDiet = dietTypeRepository.findByName("Vegetarian").orElseThrow();
+            DietType veganDiet = dietTypeRepository.findByName("Vegan").orElseThrow();
+
+            ActivityLevel sedentaryLevel = activityLevelRepository.findByName("Sedentary").orElseThrow();
+            ActivityLevel lightLevel = activityLevelRepository.findByName("Lightly Active").orElseThrow();
+            ActivityLevel moderateLevel = activityLevelRepository.findByName("Moderately Active").orElseThrow();
+            ActivityLevel veryActiveLevel = activityLevelRepository.findByName("Very Active").orElseThrow();
+            ActivityLevel extraActiveLevel = activityLevelRepository.findByName("Extra Active").orElseThrow();
+
+            Goal loseGoal = goalRepository.findByName("Lose Weight").orElseThrow();
+            Goal gainGoal = goalRepository.findByName("Gain Weight").orElseThrow();
+            Goal maintainGoal = goalRepository.findByName("Maintain Weight").orElseThrow();
+
+
+            // Потребител с роля ADMIN
             userRepository.save(User.builder()
-                    .fullName("Иван Петров")
-                    .email("ivan.petrov@example.com")
-                    .password(passwordEncoder.encode("password123"))
-                    .age(30).height(180.0).weight(80.0).gender("male")
-                    .activityLevel("high") // "low", "medium", "high"
-                    .goal("muscle_gain")
-                    .meatPreference("chicken") // "chicken", "beef", "fish", "pork", "none" (за вегетарианци/вегани)
-                    .consumesDairy(true)
-                    .trainingType("тежести")
-                    .allergies("не") // празен стринг "" или "не"
-                    .roles(List.of(userRole))
-                    .dietType(standardDiet)
-                    .build());
-
-            // Потребител 2: Жена, веган, умерена активност
-            userRepository.save(User.builder()
-                    .fullName("Мария Иванова")
-                    .email("maria.ivanova@example.com")
-                    .password(passwordEncoder.encode("password123"))
-                    .age(25).height(165.0).weight(60.0).gender("female")
-                    .activityLevel("medium")
-                    .goal("weight_loss")
-                    .meatPreference("none")
-                    .consumesDairy(false)
-                    .trainingType("без тежести")
-                    .allergies("ядки") // "ядки, глутен"
-                    .roles(List.of(userRole))
-                    .dietType(veganDiet)
-                    .build());
-
-            // Потребител 3: Мъж, кето диета, ниска активност, алергичен към глутен
-            userRepository.save(User.builder()
-                    .fullName("Георги Димитров")
-                    .email("georgi.dimitrov@example.com")
-                    .password(passwordEncoder.encode("password123"))
-                    .age(40).height(175.0).weight(95.0).gender("male")
-                    .activityLevel("low")
-                    .goal("weight_loss")
-                    .meatPreference("beef")
-                    .consumesDairy(true)
-                    .trainingType("без тежести")
-                    .allergies("глутен")
-                    .roles(List.of(userRole))
-                    .dietType(ketoDiet)
-                    .build());
-
-            // Администраторски потребител
-            userRepository.save(User.builder()
-                    .fullName("Админ Админов")
+                    .fullName("Админ Администраторов")
                     .email("admin@example.com")
                     .password(passwordEncoder.encode("adminpass"))
-                    .age(35).height(170.0).weight(70.0).gender("male")
-                    .activityLevel("medium")
-                    .goal("maintain")
-                    .meatPreference("chicken")
+                    .age(35).height(180.0).weight(80.0)
+                    .gender(GenderType.MALE)
+                    .activityLevel(veryActiveLevel)
+                    .goal(maintainGoal)
+                    .meatPreference(MeatPreferenceType.CHICKEN)
                     .consumesDairy(true)
-                    .trainingType("тежести")
-                    .allergies("не")
-                    .roles(List.of(userRole, adminRole))
+                    .trainingType(TrainingType.WEIGHTS)
+                    .allergies(Collections.emptySet())
+                    .roles(Set.of(userRole, adminRole))
                     .dietType(standardDiet)
+                    .trainingDaysPerWeek(4)
+                    .trainingDurationMinutes(90)
+                    .mealFrequencyPreference(MealFrequencyPreferenceType.THREE_TIMES_DAILY) // КОРЕКЦИЯ ТУК
+                    .level(LevelType.ADVANCED)
+                    .otherDietaryPreferences(Collections.emptySet())
                     .build());
 
-            // Ако искаш да имаш и потребител с роля MODERATOR
-            if (moderatorRole != null) {
-                userRepository.save(User.builder()
-                        .fullName("Модератор Модераторов")
-                        .email("moderator@example.com")
-                        .password(passwordEncoder.encode("modpass"))
-                        .age(28).height(168.0).weight(65.0).gender("female")
-                        .activityLevel("medium")
-                        .goal("maintain")
-                        .meatPreference("none") // Може да е вегетарианец
-                        .consumesDairy(true)
-                        .trainingType("кардио")
-                        .allergies("яйца")
-                        .roles(List.of(userRole, moderatorRole)) // USER и MODERATOR
-                        .dietType(standardDiet)
-                        .build());
-            }
+            // Потребител с роля USER (вегетарианец)
+            userRepository.save(User.builder()
+                    .fullName("Мария Петрова")
+                    .email("user@example.com")
+                    .password(passwordEncoder.encode("userpass"))
+                    .age(25).height(165.0).weight(60.0)
+                    .gender(GenderType.FEMALE)
+                    .activityLevel(lightLevel)
+                    .goal(loseGoal)
+                    .meatPreference(MeatPreferenceType.NONE)
+                    .consumesDairy(true)
+                    .trainingType(TrainingType.BODYWEIGHT)
+                    .allergies(Set.of("nuts"))
+                    .roles(Set.of(userRole))
+                    .dietType(vegetarianDiet)
+                    .trainingDaysPerWeek(3)
+                    .trainingDurationMinutes(45)
+                    .mealFrequencyPreference(MealFrequencyPreferenceType.FIVE_TIMES_DAILY) // КОРЕКЦИЯ ТУК
+                    .level(LevelType.BEGINNER)
+                    .otherDietaryPreferences(Collections.emptySet())
+                    .build());
+
+            // Потребител с роля USER (веган)
+            userRepository.save(User.builder()
+                    .fullName("Иван Иванов")
+                    .email("ivan@example.com")
+                    .password(passwordEncoder.encode("ivanpass"))
+                    .age(30).height(175.0).weight(75.0)
+                    .gender(GenderType.MALE)
+                    .activityLevel(moderateLevel)
+                    .goal(gainGoal)
+                    .meatPreference(MeatPreferenceType.NONE)
+                    .consumesDairy(false)
+                    .trainingType(TrainingType.WEIGHTS)
+                    .allergies(Set.of("soy"))
+                    .roles(Set.of(userRole))
+                    .dietType(veganDiet)
+                    .trainingDaysPerWeek(5)
+                    .trainingDurationMinutes(75)
+                    .mealFrequencyPreference(MealFrequencyPreferenceType.THREE_TIMES_DAILY) // КОРЕКЦИЯ ТУК - моля, прегледайте дали това е най-подходящата константа, ако имате друга за "3 основни + 2 закуски", добавете я в MealFrequencyPreferenceType enum.
+                    .level(LevelType.ADVANCED)
+                    .otherDietaryPreferences(Collections.emptySet())
+                    .build());
+
+            // Потребител с роля MODERATOR
+            userRepository.save(User.builder()
+                    .fullName("Модератор Модераторов")
+                    .email("moderator@example.com")
+                    .password(passwordEncoder.encode("modpass"))
+                    .age(28).height(168.0).weight(65.0)
+                    .gender(GenderType.FEMALE)
+                    .activityLevel(moderateLevel)
+                    .goal(maintainGoal)
+                    .meatPreference(MeatPreferenceType.NO_PREFERENCE)
+                    .consumesDairy(true)
+                    .trainingType(TrainingType.CARDIO)
+                    .allergies(Set.of("eggs"))
+                    .roles(Set.of(userRole, moderatorRole))
+                    .dietType(standardDiet)
+                    .trainingDaysPerWeek(3)
+                    .trainingDurationMinutes(60)
+                    .mealFrequencyPreference(MealFrequencyPreferenceType.THREE_TIMES_DAILY) // КОРЕКЦИЯ ТУК
+                    .level(LevelType.INTERMEDIATE)
+                    .otherDietaryPreferences(Collections.emptySet())
+                    .build());
 
             System.out.println("Потребители попълнени!");
         }
